# _LAB-auto-charger-plugging

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  run_docker.sh  validate_architecture.py
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/media/: audio
.github/workflows/: ros2_build.yml
charging_interfaces/: package.xml
charging_interfaces/action/: Navigate.action
config/: g1_charging_params.yaml  g1_params.yaml  perception_params.yaml
g1_manipulation/: package.xml  setup.py
g1_mission_control/: package.xml  setup.cfg  setup.py
g1_mission_control/g1_mission_control/: state_machine.py
g1_navigation/: package.xml  setup.py
g1_perception/: package.xml  setup.py
launch/: bringup.launch.py  perception.launch.py
manipulation/: package.xml  setup.py
manipulation/manipulation/: __init__.py  arm_controller.py  gripper_controller.py  manipulation_action_server.py
mission_control/: package.xml  setup.py
mission_control/mission_control/: __init__.py  state_machine.py
navigation/: package.xml  setup.py
navigation/navigation/: navigation_action_server.py  walking_controller.py
perception/: package.xml  setup.py
perception/perception/: __init__.py  charger_detector.py
src/charging_interfaces/: CMakeLists.txt  package.xml
src/charging_interfaces/action/: Detect.action  Manipulate.action
src/manipulation/: package.xml  setup.cfg
src/mission_control/: package.xml  setup.cfg
src/mission_control/mission_control/: state_machine_action_client.py
src/navigation/: package.xml  setup.cfg  setup.py
src/navigation/navigation/: __init__.py  path_planner.py
src/perception/: INSTALLATION.md  PERCEPTION_README.md  PERCEPTION_SUMMARY.md  STRUCTURE.txt  package.xml  setup.cfg  setup.py
src/perception/perception/: lidar_safety_node.py  mediapipe_detector_node.py  perception_action_server.py  port_detector.py  yolo_detector_node.py
tutorials/: isaacLab  nvidia.md
